Replace stock Bootstrap modal with Bootbox

--- a/src/Belletrix.Web/Views/Shared/_Layout.cshtml
+++ b/src/Belletrix.Web/Views/Shared/_Layout.cshtml
@@ -87,6 +87,8 @@
         <script>
             $(function () {
                 Belletrix.initPinger('@Url.Action("Ping", "Home")');
+                Belletrix.UserFirstName = '@user.FirstName';
+                Belletrix.UserLastName = '@user.LastName';
             });
         </script>
     </body>
