--- a/src/Belletrix.Web/Views/Student/List.cshtml
+++ b/src/Belletrix.Web/Views/Student/List.cshtml
@@ -117,8 +117,8 @@
                                 <ul class="list-inline" style="margin-bottom: 0">
                                     <li>
                                         <a href="@Url.Action("List", "Note", new { studentId = student.Id })"
-                                           data-toggle="modal" data-target="#noteModal"
-                                           class="studentlisttooltop studentlistmodel"
+                                           class="studentlisttooltop studentnote"
+                                           data-bt-studentname="@student.FirstName @student.MiddleName @student.LastName"
                                            title="@noteTooltip"><i class="@noteIcon"></i></a>
                                     </li>
                                     <li>
@@ -146,11 +146,4 @@
             <a href="mailto:@String.Join(";", emailableStudents)">Send email to student list</a>
         }
     }
-
-    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="noteLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-            </div>
-        </div>
-    </div>
 }
