--- a/src/Belletrix.Web/Views/Note/List.cshtml
+++ b/src/Belletrix.Web/Views/Note/List.cshtml
@@ -5,58 +5,35 @@
 @{
     ViewBag.Title = "List";
     Layout = null;
-    UserModel user = Session["User"] as UserModel;
 }
 
-<div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h4 class="modal-title" id="myModalLabel">Notes for @ViewBag.Student.FirstName @ViewBag.Student.LastName</h4>
-</div>
-<div class="modal-body">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Add New Note</h3>
-        </div>
-        <div class="panel-body">
-            @using (Html.BeginForm("Add", "Note", FormMethod.Post, new { id = "newnote" }))
-            {
-                @Html.AntiForgeryToken()
-                <input type="hidden" name="StudentId" value="@ViewBag.Student.Id" />
-
-                @Html.TextArea("Note", new { @class = "form-control", rows = 5 })
-            }
-
-            <button type="button" class="btn btn-primary">Add New Note</button>
-        </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Add New Note</h3>
     </div>
+    <div class="panel-body">
+        @using (Html.BeginForm("Add", "Note", FormMethod.Post, new { id = "newnote" }))
+        {
+            @Html.AntiForgeryToken()
+            <input type="hidden" name="StudentId" value="@ViewBag.Student.Id" />
 
-    @foreach (NoteModel note in Model)
-    {
-        <div class="list-group">
-            <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">
-                    @note.CreatedByFirstName
-                    @note.CreatedByLastName
-                    @note.EntryDate.ToString("MMM d, yyyy h:mm:ss tt")
-                </h4>
-                <p class="list-group-item-text">@note.Note</p>
-            </a>
-        </div>
-    }
-</div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            @Html.TextArea("Note", new { @class = "form-control", rows = 5 })
+        }
+
+        <button type="button" class="btn btn-primary" id="newnotebutton">Add New Note</button>
+    </div>
 </div>
 
-<script>
-    $(function () {
-        'use strict';
-
-        $('button.btn-primary').click(function () {
-            $('#newnote').submit();
-        });
-
-        Belletrix.Student.Note.handleNewNote('#newnote', 'textarea#Note', '@user.FirstName', '@user.LastName');
-        Belletrix.singleSubmit();
-    });
-</script>
+@foreach (NoteModel note in Model)
+{
+    <div class="list-group">
+        <a href="#" class="list-group-item">
+            <h4 class="list-group-item-heading">
+                @note.CreatedByFirstName
+                @note.CreatedByLastName
+                @note.EntryDate.ToString("MMM d, yyyy h:mm:ss tt")
+            </h4>
+            <p class="list-group-item-text">@note.Note</p>
+        </a>
+    </div>
+}
