Fix possibility of enum sync with Bootstrap labels mismatch

--- a/src/Belletrix.Web/Views/ActivityLog/List.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/List.cshtml
@@ -5,16 +5,6 @@
 
 @{
     ViewBag.Title = "List";
-
-    IReadOnlyDictionary<int, string> labels = new Dictionary<int, string>()
-    {
-        { 1, "label-default" },
-        { 2, "label-primary" },
-        { 3, "label-success" },
-        { 4, "label-info" },
-        { 5, "label-warning" },
-        { 6, "label-danger" }
-    };
 }
 
 @section FooterScript {
@@ -84,8 +74,8 @@
                             <td>
                                 @foreach (ActivityLogTypes type in activity.Types)
                                 {
-                                    int i = (int)type % labels.Count;
-                                    string labelClassName = labels.ContainsKey(i) ? labels[i] : labels[0];
+                                    int i = (int)type % ViewBag.TypeLabels.Count;
+                                    string labelClassName = ViewBag.TypeLabels.ContainsKey(i) ? ViewBag.TypeLabels[i] : ViewBag.TypeLabels[0];
                                     <span class="label @labelClassName">@type</span>
                                 }
                             </td>
