--- a/src/Belletrix.Web/Views/User/List.cshtml
+++ b/src/Belletrix.Web/Views/User/List.cshtml
@@ -9,74 +9,77 @@
 @section FooterScript {
     <script>
         $(function () {
-            'use strict';
-
-            $('#userlist').dataTable();
+            $('#userlist').dataTable({
+                columns: [
+                    null,
+                    null,
+                    null,
+                    null,
+                    { orderable: false }
+                ]
+            });
         });
     </script>
 }
 
 @section Body {
     <div class="row">
-        <div class="col-lg-8">
-            <h1>Users <small>@Model.Count().ToString("N0") total</small></h1>
-        </div>
-        <div class="col-lg-4 text-right">
-            <a href="@Url.Action("Add", "User")"><i class="fa fa-plus-circle"></i> Add User</a>
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                Users
+                <small>@Model.Count().ToString("N0") total</small>
+                <small>
+                    <span class="pull-right small">
+                        <a href="@Url.Action("Add", "User")"><i class="fa fa-plus-circle fa-fw"></i> Add User</a>
+                    </span>
+                </small>
+            </h1>
         </div>
     </div>
+
+    <br />
 
     <div class="row">
         <div class="col-lg-12">
-            <ol class="breadcrumb">
-                <li><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-                <li class="active"><i class="fa fa-users"></i> Users</li>
-            </ol>
-        </div>
-    </div>
-
-    <div class="table-responsive">
-        <table id="userlist" class="table table-bordered table-hover table-striped tablesorter">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Login</th>
-                    <th>Created</th>
-                    <th>Last Login</th>
-                    <th>Admin</th>
-                    <th>Active</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var user in Model)
-                {
+            <table id="userlist" class="table table-bordered table-hover table-striped tablesorter table-condensed">
+                <thead>
                     <tr>
-                        <td>
-                            <a href="@Url.Action("Edit", "User", new { username = user.Login })">@user.FirstName @user.LastName</a>
-                        </td>
-                        <td>@user.Login</td>
-                        <td>@user.Created</td>
-                        <td>
-                            @if (user.LastLogin != default(DateTime))
-                            {
-                                @user.LastLogin
-                            }
-                        </td>
-                        <td>
-                            @if (user.IsAdmin)
-                            {
-                                <i class="fa fa-check"></i>
-                            }
-                        </td>
-                        <td>
-                            @if (user.IsActive)
-                            {
-                                <i class="fa fa-check"></i>
-                            }
-                        </td>
+                        <th>Name</th>
+                        <th>Login</th>
+                        <th>Created</th>
+                        <th>Last Login</th>
+                        <th>Notes</th>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (UserModel user in Model)
+                    {
+                        <tr>
+                            <td>
+                                <a href="@Url.Action("Edit", "User", new { id = user.Id })">@user.FirstName @user.LastName</a>
+                            </td>
+                            <td>@user.Login</td>
+                            <td>@user.Created</td>
+                            <td>
+                                @if (user.LastLogin != default(DateTime))
+                                {
+                                    @user.LastLogin
+                                }
+                            </td>
+                            <td>
+                                @if (user.IsActive)
+                                {
+                                    <span class="label label-primary">Active</span>
+                                }
+                                @if (user.IsAdmin)
+                                {
+                                    <span class="label label-warning">Admin</span>
+                                }
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
 }
