--- a/src/Belletrix.Web/Views/Promo/Add.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Add.cshtml
@@ -56,7 +56,7 @@
             @Html.LabelFor(p => p.Code, new { @class = "control-label col-lg-2" })
 
             <div class="col-lg-10 right-inner-addon">
-                <i class="fa fa-check" id="codecheckresult"></i>
+                <i class="glyphicon glyphicon-ok" id="codecheckresult"></i>
                 @Html.TextBoxFor(p => p.Code, new { @class = "form-control" })
             </div>
         </div>
