--- a/src/Belletrix.Web/Views/Promo/Form.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Form.cshtml
@@ -241,7 +241,7 @@
                                 </div>
                                 <div class="col-lg-2">
                                     <div class="form-group" id="studyAbroadRowRemovals">
-                                        <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="fa fa-plus-circle"></i> Add</a></p>
+                                        <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="glyphicon glyphicon-plus-sign"></i> Add</a></p>
                                     </div>
                                 </div>
                             </div>
