--- a/src/Belletrix.Web/Views/Promo/List.cshtml
+++ b/src/Belletrix.Web/Views/Promo/List.cshtml
@@ -24,7 +24,7 @@
             <h1>Promos</h1>
         </div>
         <div class="col-lg-4 text-right">
-            <a href="@Url.Action("Add", "Promo")"><i class="fa fa-plus-circle"></i> Create New Promo</a>
+            <a href="@Url.Action("Add", "Promo")"><i class="glyphicon glyphicon-plus-sign"></i> Create New Promo</a>
         </div>
     </div>
 
@@ -68,7 +68,7 @@
                             <td>
                                 @if (promo.IsActive)
                                 {
-                                    <i class="fa fa-check"></i>
+                                    <i class="glyphicon glyphicon-ok"></i>
                                 }
                             </td>
                         </tr>
