--- a/src/Belletrix.Web/Views/Student/Add.cshtml
+++ b/src/Belletrix.Web/Views/Student/Add.cshtml
@@ -179,7 +179,7 @@
                         </div>
 
                         <div class="form-group">
-                            <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="fa fa-plus-circle"></i> Another Destination</a></p>
+                            <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="glyphicon glyphicon-plus-sign"></i> Another Destination</a></p>
                         </div>
                     </div>
                 </div>
