--- a/src/Belletrix.Web/Views/Student/StudyAbroad.cshtml
+++ b/src/Belletrix.Web/Views/Student/StudyAbroad.cshtml
@@ -100,13 +100,13 @@
                     <td>
                         @if (study.CreditBearing)
                         {
-                            <i class="fa fa-check"></i>
+                            <i class="glyphicon glyphicon-ok"></i>
                         }
                     </td>
                     <td>
                         @if (study.Internship)
                         {
-                            <i class="fa fa-check"></i>
+                            <i class="glyphicon glyphicon-ok"></i>
                         }
                     </td>
                     <td>@countryName</td>
