--- a/src/Belletrix.Web/Views/Student/View.Partial.cshtml
+++ b/src/Belletrix.Web/Views/Student/View.Partial.cshtml
@@ -191,12 +191,12 @@
                         <a href="@Url.Action("List", "Note", new { studentId = Model.Id })"
                            class="studentlisttooltop studentnote"
                            data-bt-studentname="@Model.FirstName @Model.MiddleName @Model.LastName"
-                           title="Notes"><i class="fa fa-book fa-lg"></i></a>
+                           title="Notes"><i class="glyphicon glyphicon-book"></i></a>
                     </li>
                     <li>
                         <a href="@Url.Action("Edit", "Student", new { id = Model.Id })"
                            class="studentlisttooltop" data-placement="top"
-                           title="Edit"><i class="fa fa-pencil fa-lg"></i></a>
+                           title="Edit"><i class="glyphicon glyphicon-pencil"></i></a>
                     </li>
                 </ul>
             </div>
