--- a/src/Belletrix.Web/Views/User/List.cshtml
+++ b/src/Belletrix.Web/Views/User/List.cshtml
@@ -30,7 +30,7 @@
                 <small>@Model.Count().ToString("N0") total</small>
                 <small>
                     <span class="pull-right small">
-                        <a href="@Url.Action("Add", "User")"><i class="fa fa-plus-circle fa-fw"></i> Add User</a>
+                        <a href="@Url.Action("Add", "User")"><i class="glyphicon glyphicon-plus-sign"></i> Add User</a>
                     </span>
                 </small>
             </h1>
