--- a/src/Belletrix.Web/Views/ActivityLog/List.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/List.cshtml
@@ -32,7 +32,7 @@
                 <small>@Model.Count().ToString("N0") total</small>
                 <small>
                     <span class="pull-right small">
-                        <a href="@Url.Action("Add", "ActivityLog", new { guid = Guid.NewGuid() })"><i class="fa fa-plus-circle fa-fw"></i> Add Activity</a>
+                        <a href="@Url.Action("Add", "ActivityLog", new { guid = Guid.NewGuid() })"><i class="glyphicon glyphicon-plus-sign"></i> Add Activity</a>
                     </span>
                 </small>
             </h1>
@@ -83,7 +83,7 @@
                                 <div class="btn-group">
                                     <a href="@Url.Action("Edit", "ActivityLog", new { id = activity.Id, guid = Guid.NewGuid() })"
                                        class="btn btn-xs btn-info" data-placement="top"
-                                       title="Edit"><i class="fa fa-pencil fa-fw"></i></a>
+                                       title="Edit"><i class="glyphicon glyphicon-pencil"></i></a>
                                 </div>
                             </td>
                         </tr>
