--- a/src/Belletrix.Web/Views/ActivityLog/View.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/View.cshtml
@@ -14,7 +14,7 @@
             <div class="btn-group pull-right">
                 <a href="@Url.Action("Edit", "ActivityLog", new { id = Model.ActivityLog.Id, guid = Guid.NewGuid() })"
                    class="btn btn-xs btn-info" data-placement="top"
-                   title="Edit"><i class="fa fa-pencil fa-fw"></i> Edit</a>
+                   title="Edit"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
             </div>
 
             <h2>@Model.ActivityLog.Title</h2>
@@ -45,7 +45,7 @@
         <div class="col-lg-8">
             <div class="row">
                 <div class="col-lg-12">
-                    <span class="fa fa-clock-o"></span>
+                    <span class="glyphicon glyphicon-time"></span>
                     Created
                     @Model.ActivityLog.Created.ToShortDateString()
                     @Model.ActivityLog.Created.ToShortTimeString()
@@ -88,14 +88,14 @@
                                     <p>
                                         @if (!String.IsNullOrEmpty(particpant.Person.Email))
                                         {
-                                            <span class="fa fa-envelope"></span>
+                                            <span class="glyphicon glyphicon-envelope"></span>
                                             <a href="mailto:@particpant.Person.Email">@particpant.Person.Email</a>
                                             <br />
                                         }
 
                                         @if (!String.IsNullOrEmpty(particpant.Person.PhoneNumber))
                                         {
-                                            <span class="fa fa-phone"></span>
+                                            <span class="glyphicon glyphicon-earphone"></span>
                                             if (Request.Browser.CanInitiateVoiceCall)
                                             {
                                                 <a href="tel:@particpant.Person.PhoneNumber">@particpant.Person.PhoneNumber</a>
