--- a/src/Belletrix.Web/Views/Experience/Add.cshtml
+++ b/src/Belletrix.Web/Views/Experience/Add.cshtml
@@ -30,9 +30,9 @@
         <div class="col-lg-12">
             <h1>Create Experience for @ViewBag.Student.FirstName @ViewBag.Student.LastName</h1>
             <ol class="breadcrumb">
-                <li><a href="@Url.Action("List", "Student")"><i class="fa fa-users"></i> Students</a></li>
-                <li><a href="@Url.Action("Edit", "Student", new { Id = ViewBag.Student.Id })"><i class="fa fa-user"></i> @ViewBag.Student.FirstName @ViewBag.Student.LastName</a></li>
-                <li class="active"><i class="fa fa-edit"></i> Create Experience</li>
+                <li><a href="@Url.Action("List", "Student")"><i class="glyphicon glyphicon-user"></i> Students</a></li>
+                <li><a href="@Url.Action("Edit", "Student", new { Id = ViewBag.Student.Id })"><i class="glyphicon glyphicon-user"></i> @ViewBag.Student.FirstName @ViewBag.Student.LastName</a></li>
+                <li class="active"><i class="glyphicon glyphicon-pencil"></i> Create Experience</li>
             </ol>
         </div>
     </div>
