--- a/src/Belletrix.Web/Views/Promo/Students.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Students.cshtml
@@ -24,8 +24,8 @@
     <div class="row">
         <div class="col-lg-12">
             <ol class="breadcrumb">
-                <li><a href="@Url.Action("List", "Promo")"><i class="fa fa-certificate"></i> Promos</a></li>
-                <li class="active"><i class="fa fa-users"></i> Students</li>
+                <li><a href="@Url.Action("List", "Promo")"><i class="glyphicon glyphicon-certificate"></i> Promos</a></li>
+                <li class="active"><i class="glyphicon glyphicon-user"></i> Students</li>
             </ol>
         </div>
     </div>
@@ -50,7 +50,7 @@
                                 <li>
                                     <a href="@Url.Action("Edit", "Student", new { id = student.Id })"
                                        class="studentlisttooltop" data-placement="top"
-                                       title="Edit"><i class="fa fa-pencil"></i></a>
+                                       title="Edit"><i class="glyphicon glyphicon-pencil"></i></a>
                                 </li>
                             </ul>
                         </td>
