--- a/src/Belletrix.Web/Views/Shared/_Layout.cshtml
+++ b/src/Belletrix.Web/Views/Shared/_Layout.cshtml
@@ -51,18 +51,18 @@
                 <ul class="nav navbar-top-links navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-user fa-fw"></i>
+                            <i class="glyphicon glyphicon-user"></i>
                             @user.FirstName @user.LastName
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="@Url.Action("Edit", "User", new { id = user.Id })"><i class="fa fa-user fa-fw"></i> Edit Profile</a></li>
+                            <li><a href="@Url.Action("Edit", "User", new { id = user.Id })"><i class="glyphicon glyphicon-user"></i> Edit Profile</a></li>
                             @if (user.IsAdmin)
                             {
-                                <li><a href="@Url.Action("List", "User")"><i class="fa fa-users fa-fw"></i> User List</a></li>
+                                <li><a href="@Url.Action("List", "User")"><i class="glyphicon glyphicon-th-list"></i> User List</a></li>
                             }
                             <li class="divider"></li>
-                            <li><a href="@Url.Action("Logoff", "User")"><i class="fa fa-power-off fa-fw"></i> Log Out</a></li>
+                            <li><a href="@Url.Action("Logoff", "User")"><i class="glyphicon glyphicon-off"></i> Log Out</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -70,11 +70,11 @@
                 <div class="navbar-default sidebar" role="navigation">
                     <div class="sidebar-nav @navbarCollapseClassName collapse">
                         <ul class="nav" id="side-menu">
-                            <li><a href="@Url.Action("Index", "Home")" class="@sidebarLinks[HomeController.ActivePageName]"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a></li>
-                            <li><a href="@Url.Action("List", "Student")" class="@sidebarLinks[StudentController.ActivePageName]"><i class="fa fa-table fa-fw"></i> Students</a></li>
-                            <li><a href="@Url.Action("List", "Experience")" class="@sidebarLinks[ExperienceController.ActivePageName]"><i class="fa fa-plane fa-fw"></i> Experiences</a></li>
-                            <li><a href="@Url.Action("List", "Promo")" class="@sidebarLinks[PromoController.ActivePageName]"><i class="fa fa-certificate fa-fw"></i> Promos</a></li>
-                            <li><a href="@Url.Action("List", "ActivityLog")" class="@sidebarLinks[ActivityLogController.ActivePageName]"><i class="fa fa-pencil-square-o fa-fw"></i> Activity Log</a></li>
+                            <li><a href="@Url.Action("Index", "Home")" class="@sidebarLinks[HomeController.ActivePageName]"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a></li>
+                            <li><a href="@Url.Action("List", "Student")" class="@sidebarLinks[StudentController.ActivePageName]"><i class="glyphicon glyphicon-th-list"></i> Students</a></li>
+                            <li><a href="@Url.Action("List", "Experience")" class="@sidebarLinks[ExperienceController.ActivePageName]"><i class="glyphicon glyphicon-plane"></i> Experiences</a></li>
+                            <li><a href="@Url.Action("List", "Promo")" class="@sidebarLinks[PromoController.ActivePageName]"><i class="glyphicon glyphicon-certificate"></i> Promos</a></li>
+                            <li><a href="@Url.Action("List", "ActivityLog")" class="@sidebarLinks[ActivityLogController.ActivePageName]"><i class="glyphicon glyphicon-edit"></i> Activity Log</a></li>
                         </ul>
                     </div>
                 </div>
