--- a/src/Belletrix.Web/Views/Student/Edit.cshtml
+++ b/src/Belletrix.Web/Views/Student/Edit.cshtml
@@ -213,7 +213,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="fa fa-plus-circle"></i> Another Destination</a></p>
+                                    <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="glyphicon glyphicon-plus-sign"></i> Another Destination</a></p>
                                 </div>
                             </div>
                         </div>
@@ -387,7 +387,7 @@
         </div>
 
         <div class="tab-pane" id="studyabroadtab">
-            <div class="text-center"><i class="fa fa-spinner fa-3x fa-spin" style="display: inline-block;"></i></div>
+            <div class="text-center"><i class="glyphicon glyphicon-refresh" style="display: inline-block;"></i></div>
         </div>
     </div>
 }
