Initial TypeScript work
Using 607363178611bc4a9df6e1c6b33cab9169e63b78 as a reference point from
the last time we tried this.

--- a/src/Belletrix.Web/Views/Experience/Add.cshtml
+++ b/src/Belletrix.Web/Views/Experience/Add.cshtml
@@ -20,7 +20,7 @@
 
             $('#StartDate, #EndDate').datepicker();
 
-            Belletrix.singleSubmit();
+            Belletrix.Common.singleSubmit();
         });
     </script>
 }
