--- a/src/Belletrix.Web/Views/Login/Index.cshtml
+++ b/src/Belletrix.Web/Views/Login/Index.cshtml
@@ -59,9 +59,7 @@
 
     @Scripts.Render("~/bundles/js")
     <script>
-        $(function () {
-            Belletrix.singleSubmit();
-        });
+        $(Belletrix.Common.singleSubmit);
     </script>
 </body>
 </html>
