--- a/src/Belletrix.Web/Views/Student/Edit.cshtml
+++ b/src/Belletrix.Web/Views/Student/Edit.cshtml
@@ -18,7 +18,7 @@
                 [@String.Join(",", Model.StudyAbroadPeriod)]
             );
 
-            Belletrix.singleSubmit();
+            Belletrix.Common.singleSubmit();
 
             $('a[href="#studyabroadtab"]').on('show.bs.tab', function (e) {
                 $.ajax({
