--- a/src/Belletrix.Web/Views/Login/MigratePassword.cshtml
+++ b/src/Belletrix.Web/Views/Login/MigratePassword.cshtml
@@ -73,7 +73,7 @@
 
         @Scripts.Render("~/bundles/js")
         <script>
-            $(Belletrix.singleSubmit);
+            $(Belletrix.Common.singleSubmit);
         </script>
     </body>
 </html>
