--- a/src/Belletrix.Web/Views/Promo/Add.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Add.cshtml
@@ -10,7 +10,7 @@
     <script>
         $(function () {
             Belletrix.Promo.init('@Url.Action("CheckUniqueName")', '#Code', '#codecheckresult');
-            Belletrix.singleSubmit();
+            Belletrix.Common.singleSubmit();
         });
     </script>
 }
