--- a/src/Belletrix.Web/Views/Promo/Form.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Form.cshtml
@@ -18,7 +18,7 @@
     <script>
         $(function () {
             Belletrix.Promo.initForm('@Url.Action("Ping", "Home")');
-            Belletrix.singleSubmit();
+            Belletrix.Common.singleSubmit();
         });
     </script>
 }
