--- a/src/Belletrix.Web/Views/Student/Add.cshtml
+++ b/src/Belletrix.Web/Views/Student/Add.cshtml
@@ -11,7 +11,7 @@
         $(function () {
             Belletrix.Student.initStudentAddEdit('@Url.Action("NameCheck")');
             Belletrix.Student.addStudyAbroadRows([], [], []);
-            Belletrix.singleSubmit();
+            Belletrix.Common.singleSubmit();
         });
     </script>
 }
