--- a/src/Belletrix.Web/Views/User/Add.cshtml
+++ b/src/Belletrix.Web/Views/User/Add.cshtml
@@ -11,7 +11,7 @@
 
 @section FooterScript {
     <script>
-        $(Belletrix.singleSubmit);
+        $(Belletrix.Common.singleSubmit);
     </script>
 }
 
