--- a/src/Belletrix.Web/Views/Student/View.cshtml
+++ b/src/Belletrix.Web/Views/Student/View.cshtml
@@ -9,7 +9,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            Belletrix.Student.Note.initLinks();
+            new Belletrix.StudentNote();
         });
     </script>
 }
