--- a/src/Belletrix.Web/Views/Promo/Students.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Students.cshtml
@@ -9,7 +9,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            Belletrix.Student.initStudentList();
+            new Belletrix.Student.initStudentList();
         });
     </script>
 }
