Fixes from initial testing

--- a/src/Belletrix.Web/Views/Promo/Add.cshtml
+++ b/src/Belletrix.Web/Views/Promo/Add.cshtml
@@ -9,7 +9,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            Belletrix.Promo.init('@Url.Action("CheckUniqueName")', '#Code', '#codecheckresult');
+            new Belletrix.Promo('@Url.Action("CheckUniqueName")', '#Code', '#codecheckresult');
             Belletrix.Common.singleSubmit();
         });
     </script>
