--- a/src/Belletrix.Web/Views/Student/List.cshtml
+++ b/src/Belletrix.Web/Views/Student/List.cshtml
@@ -10,7 +10,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            new Belletrix.Student.initStudentList();
+            new Belletrix.Student().initStudentList();
         });
     </script>
 }
